gen/yuliParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class yuliParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, STARTBLOCK=5, ENDBLOCK=6, IFKW=7, ELSEKW=8, 
		VARIABLE=9, SCIENTIFIC_NUMBER=10, LPAREN=11, RPAREN=12, PLUS=13, MINUS=14, 
		TIMES=15, DIV=16, GT=17, LT=18, SETVAR=19, EQ=20, POINT=21, POW=22, WS=23;
	public static final int
		RULE_file_ = 0, RULE_functions = 1, RULE_setargs = 2, RULE_argumentsinit = 3, 
		RULE_operation = 4, RULE_specialfun = 5, RULE_ifstatements = 6, RULE_loopstatements = 7, 
		RULE_equation = 8, RULE_expression = 9, RULE_atom = 10, RULE_scientific = 11, 
		RULE_variable = 12, RULE_relop = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"file_", "functions", "setargs", "argumentsinit", "operation", "specialfun", 
			"ifstatements", "loopstatements", "equation", "expression", "atom", "scientific", 
			"variable", "relop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'func '", "'print '", "'while '", "'for '", "'['", "']'", "'if'", 
			"'else'", null, null, "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'>'", 
			"'<'", "':'", "'='", "'.'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "STARTBLOCK", "ENDBLOCK", "IFKW", "ELSEKW", 
			"VARIABLE", "SCIENTIFIC_NUMBER", "LPAREN", "RPAREN", "PLUS", "MINUS", 
			"TIMES", "DIV", "GT", "LT", "SETVAR", "EQ", "POINT", "POW", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public yuliParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_Context extends ParserRuleContext {
		public List<FunctionsContext> functions() {
			return getRuleContexts(FunctionsContext.class);
		}
		public FunctionsContext functions(int i) {
			return getRuleContext(FunctionsContext.class,i);
		}
		public File_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterFile_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitFile_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitFile_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_Context file_() throws RecognitionException {
		File_Context _localctx = new File_Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_file_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 28318L) != 0) {
				{
				{
				setState(28);
				functions();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionsContext extends ParserRuleContext {
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
	 
		public FunctionsContext() { }
		public void copyFrom(FunctionsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalContext extends FunctionsContext {
		public OperationContext inside;
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public GlobalContext(FunctionsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuninitContext extends FunctionsContext {
		public AtomContext arguments;
		public OperationContext inside;
		public FunctionsContext next;
		public TerminalNode VARIABLE() { return getToken(yuliParser.VARIABLE, 0); }
		public TerminalNode STARTBLOCK() { return getToken(yuliParser.STARTBLOCK, 0); }
		public TerminalNode ENDBLOCK() { return getToken(yuliParser.ENDBLOCK, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(yuliParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(yuliParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(yuliParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(yuliParser.RPAREN, i);
		}
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public List<FunctionsContext> functions() {
			return getRuleContexts(FunctionsContext.class);
		}
		public FunctionsContext functions(int i) {
			return getRuleContext(FunctionsContext.class,i);
		}
		public FuninitContext(FunctionsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterFuninit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitFuninit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitFuninit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functions);
		int _la;
		try {
			int _alt;
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new FuninitContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(T__0);
				setState(35);
				match(VARIABLE);
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LPAREN) {
					{
					{
					setState(36);
					match(LPAREN);
					}
					}
					setState(41);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VARIABLE || _la==SCIENTIFIC_NUMBER) {
					{
					{
					setState(42);
					((FuninitContext)_localctx).arguments = atom();
					}
					}
					setState(47);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==RPAREN) {
					{
					{
					setState(48);
					match(RPAREN);
					}
					}
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(54);
				match(STARTBLOCK);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 28316L) != 0) {
					{
					{
					setState(55);
					((FuninitContext)_localctx).inside = operation();
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(61);
				match(ENDBLOCK);
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(62);
						((FuninitContext)_localctx).next = functions();
						}
						} 
					}
					setState(67);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case IFKW:
			case VARIABLE:
			case SCIENTIFIC_NUMBER:
			case LPAREN:
			case PLUS:
			case MINUS:
				_localctx = new GlobalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				((GlobalContext)_localctx).inside = operation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetargsContext extends ParserRuleContext {
		public SetargsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setargs; }
	 
		public SetargsContext() { }
		public void copyFrom(SetargsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SetvariableContext extends SetargsContext {
		public VariableContext left;
		public OperationContext right;
		public TerminalNode SETVAR() { return getToken(yuliParser.SETVAR, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public SetvariableContext(SetargsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterSetvariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitSetvariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitSetvariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetargsContext setargs() throws RecognitionException {
		SetargsContext _localctx = new SetargsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_setargs);
		try {
			_localctx = new SetvariableContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((SetvariableContext)_localctx).left = variable();
			setState(72);
			match(SETVAR);
			setState(73);
			((SetvariableContext)_localctx).right = operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsinitContext extends ParserRuleContext {
		public List<SetargsContext> setargs() {
			return getRuleContexts(SetargsContext.class);
		}
		public SetargsContext setargs(int i) {
			return getRuleContext(SetargsContext.class,i);
		}
		public ArgumentsinitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentsinit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterArgumentsinit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitArgumentsinit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitArgumentsinit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsinitContext argumentsinit() throws RecognitionException {
		ArgumentsinitContext _localctx = new ArgumentsinitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argumentsinit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VARIABLE) {
				{
				{
				setState(75);
				setargs();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperationContext extends ParserRuleContext {
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
	 
		public OperationContext() { }
		public void copyFrom(OperationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CallfunContext extends OperationContext {
		public VariableContext name;
		public ArgumentsinitContext args;
		public TerminalNode LPAREN() { return getToken(yuliParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(yuliParser.RPAREN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ArgumentsinitContext argumentsinit() {
			return getRuleContext(ArgumentsinitContext.class,0);
		}
		public CallfunContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterCallfun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitCallfun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitCallfun(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SpecialfuncContext extends OperationContext {
		public SpecialfunContext specialfun() {
			return getRuleContext(SpecialfunContext.class,0);
		}
		public SpecialfuncContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterSpecialfunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitSpecialfunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitSpecialfunc(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SetargumentContext extends OperationContext {
		public SetargsContext setargs() {
			return getRuleContext(SetargsContext.class,0);
		}
		public SetargumentContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterSetargument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitSetargument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitSetargument(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EquContext extends OperationContext {
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public EquContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterEqu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitEqu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitEqu(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfgroupContext extends OperationContext {
		public IfstatementsContext ifstatements() {
			return getRuleContext(IfstatementsContext.class,0);
		}
		public IfgroupContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterIfgroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitIfgroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitIfgroup(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LoopgroupContext extends OperationContext {
		public LoopstatementsContext loopstatements() {
			return getRuleContext(LoopstatementsContext.class,0);
		}
		public LoopgroupContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterLoopgroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitLoopgroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitLoopgroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operation);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new IfgroupContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				ifstatements();
				}
				break;
			case 2:
				_localctx = new CallfunContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				((CallfunContext)_localctx).name = variable();
				setState(83);
				match(LPAREN);
				setState(85);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(84);
					((CallfunContext)_localctx).args = argumentsinit();
					}
					break;
				}
				setState(87);
				match(RPAREN);
				}
				break;
			case 3:
				_localctx = new LoopgroupContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				loopstatements();
				}
				break;
			case 4:
				_localctx = new SetargumentContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				setargs();
				}
				break;
			case 5:
				_localctx = new SpecialfuncContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				specialfun();
				}
				break;
			case 6:
				_localctx = new EquContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				equation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecialfunContext extends ParserRuleContext {
		public SpecialfunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specialfun; }
	 
		public SpecialfunContext() { }
		public void copyFrom(SpecialfunContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintfunContext extends SpecialfunContext {
		public OperationContext inside;
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public PrintfunContext(SpecialfunContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterPrintfun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitPrintfun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitPrintfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecialfunContext specialfun() throws RecognitionException {
		SpecialfunContext _localctx = new SpecialfunContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_specialfun);
		try {
			_localctx = new PrintfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__1);
			setState(96);
			((PrintfunContext)_localctx).inside = operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfstatementsContext extends ParserRuleContext {
		public IfstatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstatements; }
	 
		public IfstatementsContext() { }
		public void copyFrom(IfstatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfelsestatementContext extends IfstatementsContext {
		public ExpressionContext condition;
		public OperationContext inside;
		public ExpressionContext elseinside;
		public TerminalNode IFKW() { return getToken(yuliParser.IFKW, 0); }
		public TerminalNode LPAREN() { return getToken(yuliParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(yuliParser.RPAREN, 0); }
		public List<TerminalNode> STARTBLOCK() { return getTokens(yuliParser.STARTBLOCK); }
		public TerminalNode STARTBLOCK(int i) {
			return getToken(yuliParser.STARTBLOCK, i);
		}
		public List<TerminalNode> ENDBLOCK() { return getTokens(yuliParser.ENDBLOCK); }
		public TerminalNode ENDBLOCK(int i) {
			return getToken(yuliParser.ENDBLOCK, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> ELSEKW() { return getTokens(yuliParser.ELSEKW); }
		public TerminalNode ELSEKW(int i) {
			return getToken(yuliParser.ELSEKW, i);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public IfelsestatementContext(IfstatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterIfelsestatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).exitIfelsestatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yuliVisitor ) return ((yuliVisitor<? extends T>)visitor).visitIfelsestatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfstatementContext extends IfstatementsContext {
		public ExpressionContext condition;
		public OperationContext inside;
		public TerminalNode IFKW() { return getToken(yuliParser.IFKW, 0); }
		public TerminalNode LPAREN() { return getToken(yuliParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(yuliParser.RPAREN, 0); }
		public TerminalNode STARTBLOCK() { return getToken(yuliParser.STARTBLOCK, 0); }
		public TerminalNode ENDBLOCK() { return getToken(yuliParser.ENDBLOCK, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public IfstatementContext(IfstatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yuliListener ) ((yuliListener)listener).enterIfstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
